# gausskit

./: README.md  XYZ.xyz  et --hard acb39d0  fort.7  pyproject.toml  setup.py  test-stab.com  test.com  test1.com  test2-stab.chk  test2.chk  test2.com  test2.sbatch
gausskit/: FC.com  FC.sbatch  H2-ES.com  H2-ES_fc.sbatch  H2-GS.com  H2OXYZ.xyz  __init__.py  analyze.py  builder.py  cli.py  completions.py  distort.py  error_fixer.py  fort.7  franck_condon.py  gaussian_errors.yaml  generator.py  h2_fc.com  h2o_anion.chk  h2o_anion.com  h2o_anion_fc.com  h2o_neutral.fchk  io.py  scheduler.py  scheduler_old.py  test1.com  utils.py  vibronic.py
gausskit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
gausskit/examples/FC/: README.md  ch2o_neutral.com  ch2o_neutral.sbatch  ch2o_neutral_fc.com  fort.7
gausskit/examples/SCAN/: H2O.xyz  SDDPlusTZ.gbs  Tb2O_Scan.xyz
gausskit/examples/benchmark/: H2.xyz  H2O_B3LYP_631pGdp.com  H2O_B3LYP_631pGdp.sbatch  H2O_B3LYP_631pGdp.xyz  H2O_B3LYP_STO3G.com  H2O_B3LYP_STO3G.sbatch  H2O_B3LYP_STO3G.xyz  H2O_B3LYP_genecp.chk  H2O_B3LYP_genecp.com  H2O_B3LYP_genecp.sbatch  H2O_B3LYP_genecp.xyz  H2O_CAMB3LYP_631pGdp.com  H2O_CAMB3LYP_631pGdp.sbatch  H2O_CAMB3LYP_631pGdp.xyz  H2O_CAMB3LYP_STO3G.com  H2O_CAMB3LYP_STO3G.sbatch  H2O_CAMB3LYP_STO3G.xyz  H2O_CAMB3LYP_genecp.com  H2O_CAMB3LYP_genecp.sbatch  H2O_CAMB3LYP_genecp.xyz  H2O_HF_631pGdp.com  H2O_HF_631pGdp.sbatch  H2O_HF_631pGdp.xyz  H2O_HF_STO3G.com  (+39 more)
gausspimom/: builder.py  cli.py
gausspimom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+73 files in other folders)
